--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -1,3 +1,23 @@
 img {
     width: 100px;
   }
+
+  .cart-widget {
+    position: relative;
+    display: inline-block;
+    font-size: 35px;
+    background-color: #FF5733;
+}
+
+.cart-number {
+    position: absolute;
+    top: -5px;
+    right: -10px;
+    font-size: 12px;
+    font-weight: bold;
+    border-radius: 50%;
+    padding: 4px 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
